Feature/session details and calendar (#96)
* Session data model, service for loading conference sessions

* Session backend routes, update script for new session start times

* Start session detail page with according event list

* Add minimalistic styling the session details page

* Take limited width to general app layout

* Calender time is currently hard-coded
