# backend/app.js
@@ -11,6 +11,7 @@ const index = require('./routes/index');
 const auth = require('./routes/auth');
 const events = require('./routes/events');
 const persons = require('./routes/persons');
+const sessions = require('./routes/sessions');
 
 const models = require('./model/index');
 
@@ -39,6 +40,7 @@ models.sequelize.sync({ force: forceSync }).then(() => {
   app.subroute('/api', index);
   app.subroute('/api/auth', auth);
   app.subroute('/api/events', events);
+  app.subroute('/api/sessions', sessions);
   app.subroute('/api', persons);
 
   // Catch 404 and forward to error handler
